crates/swc_ecma_parser/tests/test262-error-references/fail/944ea2478d838026.js.stderr
error: Generator cannot be labelled
 --> $DIR/tests/test262-parser/fail/944ea2478d838026.js:1:8
  |
1 | label: function* a(){}
  |        ^^^^^^^^^^^^^^^

